# telemetry

./: CMakeLists.txt  README.md  package.xml  run_scripts.py
launch/: telemetry_bs.launch.py  telemetry_rc.launch.py
proto/: BaseToCar.proto  CMakeLists.txt  PerceptionData.proto  TrajectoryData.proto  UdpMessage.proto  VehicleData.proto  reindex_proto.py
src/: telemetry_base_station.cpp  telemetry_race_car.cpp
test/data_test_rust/: receive.rs  send.rs
test/lora_test/: helloWorldTest.proto  helloWorldTest_pb2.py  recieve.py  send.py  tempTest.proto  tempTest_pb2.py
